fix for bold symbols

--- a/_articles/RJ-2024-036/RJ-2024-036.Rmd
+++ b/_articles/RJ-2024-036/RJ-2024-036.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'LMest: An R Package for Estimating Generalized Latent Markov Models'
-date: '2025-07-11'
+date: '2025-07-16'
 abstract: |
   We provide a detailed overview of the updated version of the R package LMest, which offers functionalities for estimating Markov chain and latent or hidden Markov models for time series and longitudinal data. This overview includes a description of the modeling structure, maximum-likelihood estimation based on the Expectation-Maximization algorithm, and related issues. Practical applications of these models are illustrated using real and simulated data with both categorical and continuous responses. The latter are handled under the assumption of the Gaussian distribution given the latent process. When describing the main functions of the package, we refer to potential applicative contexts across various fields. The LMest package introduces several key novelties compared to previous versions. It now handles missing responses under the missing-at-random assumption and provides imputed values. The implemented functions allow users to display and visualize model results. Additionally, the package includes functions to perform parametric bootstrap for inferential procedures and to simulate data with complex structures in longitudinal contexts.
 author:
@@ -29,6 +29,7 @@ author:
   email: francesco.bartolucci@unipg.it
   orcid: 0000-1721-1511-1101
   type: package
+header-includes: \usepackage{bm}
 output:
   rjtools::rjournal_article:
     self_contained: yes
@@ -43,9 +44,6 @@ volume: 16
 issue: 4
 slug: RJ-2024-036
 draft: no
-journal:
-  lastpage: 103
-  firstpage: 76
 
 ---
 
@@ -57,7 +55,7 @@ journal:
 \renewcommand{\th}{\theta}
 \newcommand{\si}{\sigma}
 \newcommand{\bu}{\bar{u}}
-\def\b#1{\mbox{\boldmath $#1$}}
+\renewcommand{\b}[1]{\boldsymbol{#1}}
 
 ```{r,include=F}
 if(knitr::is_html_output()){options(knitr.table.format = "html")} else {options(knitr.table.format = "latex")}
@@ -68,7 +66,7 @@ if(knitr::is_html_output()){options(knitr.table.format = "html")} else {options(
 `r if (knitr:::is_html_output()) '\\newcommand{\\var}{\\operatorname{Var}}'`
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, cache=TRUE)
 library(LMest)
 library(plotly)
 library(ggplot2)
@@ -102,7 +100,10 @@ through an overview of the \CRANpkg{LMest} package, focusing in
 particular on the new features of this package compared to the previous
 versions, such as the one illustrated in \cite{bart:pand:penn:17}. The
 package allows analyzing time-series and longitudinal data by the models
-at issues. In the longitudinal context, recurring measurements over time on possibly multiple characteristics are taken on several sampling units (e.g., individuals), in such a way that it is possible to describe the evolution of these characteristics over time.
+at issues. In the longitudinal context, recurring measurements over time on
+possibly multiple characteristics are taken on several sampling units (e.g.,
+individuals), in such a way that it is possible to describe the evolution of
+these characteristics over time.
 
 The package in its updated version 3.2.5 is available
 on CRAN at \CRANpkg{LMest} and it is also described with detailed
@@ -252,7 +253,8 @@ we have
 (\#eq:mcmodmult)
 \end{equation} Note that, as a reference category, the multinomial logit
 model in \@ref(eq:mcmodmult) has the first state. For the transition
-probabilities we assume \begin{equation}
+probabilities we assume 
+\begin{equation}
 \log\frac{\pi_{it,uv}}{\pi_{it,uu}}= \gamma_{0uv} + \b{x}_{it}^\prime \b{\gamma}_{1uv},\quad t=2,\ldots,T, \: u,v = 1,\ldots,k,\: u \neq v,
  (\#eq:mcmodmult2)
 \end{equation} where the logits have, as reference state, that
