--- a/_articles/RJ-2024-036/RJ-2024-036.tex
+++ b/_articles/RJ-2024-036/RJ-2024-036.tex
@@ -17,7 +17,7 @@ We provide a detailed overview of the updated version of the R package LMest, wh
 \renewcommand{\th}{\theta}
 \newcommand{\si}{\sigma}
 \newcommand{\bu}{\bar{u}}
-\def\b#1{\mbox{\boldmath $#1$}}
+\renewcommand{\b}[1]{\boldsymbol{#1}}
 
 \hypertarget{sec:intro}{%
 \section{Introduction}\label{sec:intro}}
@@ -47,7 +47,10 @@ through an overview of the \CRANpkg{LMest} package, focusing in
 particular on the new features of this package compared to the previous
 versions, such as the one illustrated in \cite{bart:pand:penn:17}. The
 package allows analyzing time-series and longitudinal data by the models
-at issues. In the longitudinal context, recurring measurements over time on possibly multiple characteristics are taken on several sampling units (e.g., individuals), in such a way that it is possible to describe the evolution of these characteristics over time.
+at issues. In the longitudinal context, recurring measurements over time on
+possibly multiple characteristics are taken on several sampling units (e.g.,
+individuals), in such a way that it is possible to describe the evolution of
+these characteristics over time.
 
 The package in its updated version 3.2.5 is available
 on CRAN at \CRANpkg{LMest} and it is also described with detailed
@@ -179,7 +182,7 @@ of interest to estimate the transition between states of the stochastic
 process. With only one categorical response variable, let
 \(\mathbf{Y}_{i} = (Y_{i1},\ldots,Y_{iT})^\prime\) denote the vector of
 such variables for individual \(i\), with \(i=1,\ldots,n\), where \(Y_{it}\)
-has \(k\) categories labeled from 1 to \(k\). Let \(\mbox{\boldmath $x$}_{it}\) denote the
+has \(k\) categories labeled from 1 to \(k\). Let \(\boldsymbol{x}_{it}\) denote the
 vector of individual covariates available at the \(t\)-th time occasion
 for individual \(i\), with \(t=1,\ldots,T\).
 
@@ -196,38 +199,39 @@ denoted by \[
 
 In presence of individual time-fixed and time-varying covariates, the
 initial and transition probabilities are denoted as
-\(\pi_{i,u}= p(Y_{i1} = u |\mbox{\boldmath $x$}_{i1})\), \(u=1,\ldots,k\), and
-\(\pi_{it,uv} = p(Y_{it} = v | Y_{i,t-1}= u, \mbox{\boldmath $x$}_{it})\),
+\(\pi_{i,u}= p(Y_{i1} = u |\boldsymbol{x}_{i1})\), \(u=1,\ldots,k\), and
+\(\pi_{it,uv} = p(Y_{it} = v | Y_{i,t-1}= u, \boldsymbol{x}_{it})\),
 \(t=2,\ldots,T,\:\ u,v=1,\ldots,k\), respectively. Note that these
 probabilities are now individual specific, and their dependence on the
 vector of covariates is formulated on the basis of multinomial logit
 models \citep{azzalini:94}. In particular, for the initial probabilities
 we have
 \begin{equation}
-\log\frac{\pi_{i,u}}{\pi_{i,1}}= \beta_{0u} + \mbox{\boldmath $x$}_{i1}^\prime \mbox{\boldmath $\beta$}_{1u},\quad u=2,\ldots,k.
+\log\frac{\pi_{i,u}}{\pi_{i,1}}= \beta_{0u} + \boldsymbol{x}_{i1}^\prime \boldsymbol{\beta}_{1u},\quad u=2,\ldots,k.
 \label{eq:mcmodmult}
 \end{equation} Note that, as a reference category, the multinomial logit
 model in \eqref{eq:mcmodmult} has the first state. For the transition
-probabilities we assume \begin{equation}
-\log\frac{\pi_{it,uv}}{\pi_{it,uu}}= \gamma_{0uv} + \mbox{\boldmath $x$}_{it}^\prime \mbox{\boldmath $\gamma$}_{1uv},\quad t=2,\ldots,T, \: u,v = 1,\ldots,k,\: u \neq v,
+probabilities we assume
+\begin{equation}
+\log\frac{\pi_{it,uv}}{\pi_{it,uu}}= \gamma_{0uv} + \boldsymbol{x}_{it}^\prime \boldsymbol{\gamma}_{1uv},\quad t=2,\ldots,T, \: u,v = 1,\ldots,k,\: u \neq v,
  \label{eq:mcmodmult2}
 \end{equation} where the logits have, as reference state, that
 corresponding to the row of the transition matrix. In the above
-expressions, \(\mbox{\boldmath $\beta$}_u = (\beta_{0u}, \mbox{\boldmath $\beta$}_{1u}^\prime)^\prime\)
-and \(\mbox{\boldmath $\gamma$}_{uv} = (\gamma_{0uv},\mbox{\boldmath $\gamma$}_{1uv}^\prime)^\prime\)
+expressions, \(\boldsymbol{\beta}_u = (\beta_{0u}, \boldsymbol{\beta}_{1u}^\prime)^\prime\)
+and \(\boldsymbol{\gamma}_{uv} = (\gamma_{0uv},\boldsymbol{\gamma}_{1uv}^\prime)^\prime\)
 are parameter vectors to be estimated.
 
-Denoting by \(\mbox{\boldmath $\theta$}\) the vector of all model parameters, the
+Denoting by \(\boldsymbol{\theta}\) the vector of all model parameters, the
 log-likelihood can be defined as \[
-\ell(\mbox{\boldmath $\theta$}) = \sum_{i=1}^n f(y_{i1},\ldots,y_{iT}|\mbox{\boldmath $x$}_{i1},\ldots \mbox{\boldmath $x$}_{iT}),
-\] where \(f(y_{i1},\ldots,y_{iT}|\mbox{\boldmath $x$}_{i1},\ldots \mbox{\boldmath $x$}_{iT})\) is the
+\ell(\boldsymbol{\theta}) = \sum_{i=1}^n f(y_{i1},\ldots,y_{iT}|\boldsymbol{x}_{i1},\ldots \boldsymbol{x}_{iT}),
+\] where \(f(y_{i1},\ldots,y_{iT}|\boldsymbol{x}_{i1},\ldots \boldsymbol{x}_{iT})\) is the
 probability of the observed vector of response variables for unit \(i\)
 and \(y_{it}\) is a realization of \(Y_{it}\). Under the assumptions
 formulated for the MC model, and in presence of individual covariates,
 this probability may be expressed as
 
 \[
-f(y_{i1},\ldots,y_{iT}|\mbox{\boldmath $x$}_{i1},\ldots \mbox{\boldmath $x$}_{iT}) = \pi_{i,y_{i1}} \prod_{t=2}^{T}\pi_{it,y_{i,t-1}y_{it}}.
+f(y_{i1},\ldots,y_{iT}|\boldsymbol{x}_{i1},\ldots \boldsymbol{x}_{iT}) = \pi_{i,y_{i1}} \prod_{t=2}^{T}\pi_{it,y_{i,t-1}y_{it}}.
 \]
 
 For the basic MC model without covariates, explicit formulas are
@@ -239,7 +243,7 @@ is required to maximize the above log-likelihood. As is well known, at
 each step of these algorithms, the parameter vector is updated by adding
 to its current value the inverse of the observed or expected information
 matrix, which is multiplied by the score vector, that is, the vector of
-the first derivatives of \(\ell(\mbox{\boldmath $\theta$})\). These steps are performed
+the first derivatives of \(\ell(\boldsymbol{\theta})\). These steps are performed
 until a suitable convergence criterion is satisfied. The corresponding
 asymptotic standard errors can be obtained in the usual way from the
 diagonal elements of the information matrix; see
@@ -535,13 +539,13 @@ We outline the main notation and assumptions of the HM models useful to understa
 \subsection{Model assumptions}\label{sec:HMassump}}
 
 For a sample of \(n\) individuals and \(T_i\) time occasions, let
-\(\mbox{\boldmath $Y$}_{it}\), \(i=1,\ldots,n\), \(t=1,\ldots,T_i\), be the observable vector
+\(\boldsymbol{Y}_{it}\), \(i=1,\ldots,n\), \(t=1,\ldots,T_i\), be the observable vector
 of response variables with elements \(Y_{ijt}\), \(j=1,\ldots,r\), where \(r\)
 denotes the number of response variables. Note that the number of time
 occasions \(T_i\) is specific for each individual \(i\). In this way, we
 allow for unbalanced panels that may be due to a different number of
 time occasions for every individual. Let also
-\(\mbox{\boldmath $U$}_i = (U_{i1},\ldots,U_{iT_i})^\prime\) denote the latent process
+\(\boldsymbol{U}_i = (U_{i1},\ldots,U_{iT_i})^\prime\) denote the latent process
 for each individual \(i\) that affects the distribution of the response
 variables and assumed to follow a first-order Markov chain with a
 certain number of latent (or hidden) states equal to \(k\). The Markov
@@ -564,7 +568,7 @@ measurement (sub)model without covariates is based on the parameters
 j = 1,\ldots,r,  \: t = 1,\ldots,T_i, \: u = 1, \ldots, k,\: y = 0,\ldots, l_j - 1,
 \label{eq:hmcond}
 \end{equation} where \(l_j\) corresponds to the number of response
-categories of the \(j\)-variable in \(\mbox{\boldmath $Y$}_{it}\).
+categories of the \(j\)-variable in \(\boldsymbol{Y}_{it}\).
 
 Regarding the latent (sub)model, the typical assumption is that the
 latent Markov chain is of first order and, for the initial and
@@ -579,7 +583,7 @@ transition probabilities are assumed to be time homogeneous to reduce
 the number of free parameters. However, this assumption can be relaxed if it proves to be too restrictive.
 
 When available, individual explanatory variables, collected in the
-vectors \(\mbox{\boldmath $x$}_{it}\), may be included in the measurement model, so as to
+vectors \(\boldsymbol{x}_{it}\), may be included in the measurement model, so as to
 account for the unobserved heterogeneity between units, or in the latent
 model, so that they affect the initial and transition probabilities of
 the Markov chain. In the latter case, these probabilities may be defined
@@ -597,9 +601,9 @@ probabilities, denoted as \texttt{paramLatent\ =\ "difflogit"}. Such a
 parameterization relies on logits based on the difference between two
 vectors of parameters, for \(t=2,\ldots,T_i\): \begin{equation}
 \log\frac{\pi_{it,uv}} {\pi_{it,uu}} =
-\gamma_{0uv} + \mbox{\boldmath $x$}_{it}^\prime (\mbox{\boldmath $\gamma$}_{1v}-\mbox{\boldmath $\gamma$}_{1u}),\quad u,v=1,\ldots,k, \: u\neq v,
+\gamma_{0uv} + \boldsymbol{x}_{it}^\prime (\boldsymbol{\gamma}_{1v}-\boldsymbol{\gamma}_{1u}),\quad u,v=1,\ldots,k, \: u\neq v,
 \label{eq:hmtransd}
-\end{equation} where \(\mbox{\boldmath $\gamma$}_{11}= \mbox{\boldmath $0$}\) to ensure model
+\end{equation} where \(\boldsymbol{\gamma}_{11}= \boldsymbol{0}\) to ensure model
 identifiability; see \cite{bart:mont:pand:15} for an example of
 application of this parameterization.
 
@@ -622,24 +626,24 @@ We illustrate maximum likelihood estimation in the general case in which
 covariates are available and are included in the distribution of the
 latent process. In this case, for a sample of \(n\) independent units, the
 model log-likelihood has the following expression: \[
-\ell(\mbox{\boldmath $\theta$}) = \sum_{i=1}^n f(\mbox{\boldmath $y$}_{i1},\ldots,\mbox{\boldmath $y$}_{iT_i}|\mbox{\boldmath $x$}_{i1},\ldots,\mbox{\boldmath $x$}_{iT_i}),
-\] where \(\mbox{\boldmath $\theta$}\) is the vector of all free model parameters and
-\(f(\mbox{\boldmath $y$}_{i1},\ldots,\mbox{\boldmath $y$}_{iT_i}|\mbox{\boldmath $x$}_{i1},\ldots,\mbox{\boldmath $ x$}_{iT_i})\)
+\ell(\boldsymbol{\theta}) = \sum_{i=1}^n f(\boldsymbol{y}_{i1},\ldots,\boldsymbol{y}_{iT_i}|\boldsymbol{x}_{i1},\ldots,\boldsymbol{x}_{iT_i}),
+\] where \(\boldsymbol{\theta}\) is the vector of all free model parameters and
+\(f(\boldsymbol{y}_{i1},\ldots,\boldsymbol{y}_{iT_i}|\boldsymbol{x}_{i1},\ldots,\boldsymbol{ x}_{iT_i})\)
 corresponds to the manifest distribution, that is, the probability of
 the responses provided by subject \(i\) given the covariates. This
 manifest probability has expression \begin{equation}
-f(\mbox{\boldmath $y$}_{i1},\ldots,\mbox{\boldmath $y$}_{iT_i}|\mbox{\boldmath $x$}_{i1},\ldots,\mbox{\boldmath $x$}_{iT_i}) =  \sum_{u_1=1}^k\cdots\sum_{u_{T_i}=1}^k \pi_{i,u_1}
+f(\boldsymbol{y}_{i1},\ldots,\boldsymbol{y}_{iT_i}|\boldsymbol{x}_{i1},\ldots,\boldsymbol{x}_{iT_i}) =  \sum_{u_1=1}^k\cdots\sum_{u_{T_i}=1}^k \pi_{i,u_1}
 \prod_{t=2}^{T_i}\pi_{it,u_{t-1}u_t}
-\prod_{t=1}^{T_i}f(\mbox{\boldmath $y$}_{it}|u_t),
+\prod_{t=1}^{T_i}f(\boldsymbol{y}_{it}|u_t),
 \label{eq:manifest}
-\end{equation} where \(f(\mbox{\boldmath $y$}_{it}|u)\) refers to the conditional
+\end{equation} where \(f(\boldsymbol{y}_{it}|u)\) refers to the conditional
 distribution of the response variables for unit \(i\) at time occasion
 \(t\) given the latent process that, in the case of categorical response
 variables, is freely parameterized by the conditional response
 probabilities in Equation \eqref{eq:hmcond}.
 
 In order to compute
-\(f(\mbox{\boldmath $y$}_{i1},\ldots,\mbox{\boldmath $y$}_{iT_i}|\mbox{\boldmath $x$}_{i1},\ldots,\mbox{\boldmath $x$}_{iT_i})\) while
+\(f(\boldsymbol{y}_{i1},\ldots,\boldsymbol{y}_{iT_i}|\boldsymbol{x}_{i1},\ldots,\boldsymbol{x}_{iT_i})\) while
 avoiding the sum in Equation \eqref{eq:manifest}, which has a
 computational cost that exponentially increases in \(T_i\), we rely on the
 Baum and Welch recursion \citep{baum:petr:66} that is described in
@@ -652,7 +656,7 @@ expected value so as to update the model parameters. The convergence of
 the EM algorithm is assessed on the basis of a suitable convergence
 criterion relying on the relative log-likelihood difference between two
 consecutive iterations. From this iterative algorithm we obtain an
-estimate of \(\mbox{\boldmath $\theta$}\), denoted by \(\mbox{\boldmath $\hat{\theta}$}\).
+estimate of \(\boldsymbol{\theta}\), denoted by \(\boldsymbol{\hat{\theta}}\).
 
 For HM models, initialization of the estimation algorithm is an
 important issue as the model log-likelihood is typically multimodal. The
@@ -682,10 +686,10 @@ Selection of the number of states is performed according to information
 criteria such as AIC \citep{aka:73} and BIC \citep{sch:78}. They are
 defined as follows:
 \begin{eqnarray*}
-AIC &=& -2 {\ell}(\mbox{\boldmath $\hat{\theta}$}) + 2 \;\#par,\\
-BIC &=& -2 {\ell}(\mbox{\boldmath $\hat{\theta}$}) + \log(n)\;\#par,
+AIC &=& -2 {\ell}(\boldsymbol{\hat{\theta}}) + 2 \;\#par,\\
+BIC &=& -2 {\ell}(\boldsymbol{\hat{\theta}}) + \log(n)\;\#par,
 \end{eqnarray*}
-where \({\ell}(\mbox{\boldmath $\hat{\theta}$})\) denotes the maximized log-likelihood
+where \({\ell}(\boldsymbol{\hat{\theta}})\) denotes the maximized log-likelihood
 of the model of interest, \(n\) is the sample size, and \(\#par\) denotes
 the number of free parameters to be estimated. Other criteria, such as
 those based on entropy may be used; see, among others,
@@ -696,10 +700,10 @@ by assigning every unit to a latent state at each time occasion by means
 of the estimated posterior probabilities of the \(U_{it}\). These
 probabilities are directly provided by the EM algorithm and are defined
 as \begin{equation}
-\hat{a}_{it,u} = p(U_{it}=u | \mbox{\boldmath $y$}_{i1},\ldots, \mbox{\boldmath $y$}_{iT_i},\mathbf{x}_{i1},\ldots,\mbox{\boldmath $x$}_{iT_i}), \: t=1,\ldots,T_i, \: u = 1,\ldots,k, \label{eq:postprob}
+\hat{a}_{it,u} = p(U_{it}=u | \boldsymbol{y}_{i1},\ldots, \boldsymbol{y}_{iT_i},\mathbf{x}_{i1},\ldots,\boldsymbol{x}_{iT_i}), \: t=1,\ldots,T_i, \: u = 1,\ldots,k, \label{eq:postprob}
 \end{equation}\\
 \[
-\hat{b}_{it,uv} = p(U_{i,t-1}=u, U_{it}=v | \mbox{\boldmath $y$}_{i1},\ldots,\mbox{\boldmath $y$}_{iT_i},\mbox{\boldmath $x$}_{i1},\ldots,\mbox{\boldmath $x$}_{iT_i}), \: t=2,\ldots,T_i, \: u,v = 1,\ldots,k. \label{eq:postprob2}
+\hat{b}_{it,uv} = p(U_{i,t-1}=u, U_{it}=v | \boldsymbol{y}_{i1},\ldots,\boldsymbol{y}_{iT_i},\boldsymbol{x}_{i1},\ldots,\boldsymbol{x}_{iT_i}), \: t=2,\ldots,T_i, \: u,v = 1,\ldots,k. \label{eq:postprob2}
 \]
 
 Prediction of the latent states of every unit \(i\) at each time occasion
@@ -1068,21 +1072,21 @@ using the appropriate functions of the \CRANpkg{LMest} package.
 \subsection{Model assumptions and inference}\label{sec:HMcontassump}}
 
 When dealing with continuous outcomes, let
-\(\mbox{\boldmath $Y$}_{it} = (Y_{i1t}, \ldots, Y_{irt})^\prime\) denote the vector of
+\(\boldsymbol{Y}_{it} = (Y_{i1t}, \ldots, Y_{irt})^\prime\) denote the vector of
 \(r\) continuous response variables measured at time \(t\) for subject \(i\).
 As usual, under the local independence assumption, the response vectors
-\(\mbox{\boldmath $Y$}_{i1}, \ldots, \mbox{\boldmath $Y$}_{iT_i}\) are assumed to be conditionally
-independent given the latent process \(\mbox{\boldmath $U$}_i\). Moreover, for the
+\(\boldsymbol{Y}_{i1}, \ldots, \boldsymbol{Y}_{iT_i}\) are assumed to be conditionally
+independent given the latent process \(\boldsymbol{U}_i\). Moreover, for the
 measurement model, we assume a conditional Gaussian distribution, that is,
 \begin{equation}
-\mbox{\boldmath $Y$}_{it}|U_{it}= u \sim N(\mbox{\boldmath $\mu$}_u,{\mbox{\boldmath $\Sigma$}}_u),\quad u=1,\ldots,k.\label{eq:norm}
+\boldsymbol{Y}_{it}|U_{it}= u \sim N(\boldsymbol{\mu}_u,{\boldsymbol{\Sigma}}_u),\quad u=1,\ldots,k.\label{eq:norm}
 \end{equation}
 
 The parameters of the measurement (sub)model are the conditional means
-\(\mbox{\boldmath $\mu$}_u\), \(u=1,\ldots,k\), which are state specific, and the
-variance-covariance matrices \(\mbox{\boldmath $\Sigma$}_u\), which may be assumed to be
+\(\boldsymbol{\mu}_u\), \(u=1,\ldots,k\), which are state specific, and the
+variance-covariance matrices \(\boldsymbol{\Sigma}_u\), which may be assumed to be
 constant across states under the assumption of homoschedasticity, that
-is, \(\mbox{\boldmath $\Sigma$}_1 = \cdots = \mbox{\boldmath $\Sigma$}_k = \mbox{\boldmath $\Sigma$}\). This
+is, \(\boldsymbol{\Sigma}_1 = \cdots = \boldsymbol{\Sigma}_k = \boldsymbol{\Sigma}\). This
 assumption, which reduces the number of estimated parameters and may be
 reasonable in many applied contexts, is adopted in the \CRANpkg{LMest}
 package.
@@ -1096,12 +1100,12 @@ transition probabilities. It is also possible to assume that individual
 covariates affect the distribution of the response variables given the
 latent process, thereby accounting for unobserved heterogeneity. The
 latter formulation is based on the assumption that \[
-E(Y_{it}| U_{it} = u, \mbox{\boldmath $x$}_{it}) =  {\alpha}_{u} + \mbox{\boldmath $x$}_{it}^\prime \mbox{\boldmath $\beta$},\quad u=1,\ldots,k,
+E(Y_{it}| U_{it} = u, \boldsymbol{x}_{it}) =  {\alpha}_{u} + \boldsymbol{x}_{it}^\prime \boldsymbol{\beta},\quad u=1,\ldots,k,
 \] which naturally extends to the multivariate case.
 
 The manifest distribution may be expressed with a formula that closely
 recalls the one used in Equation \eqref{eq:manifest} for HM models for
-categorical responses, but with \(f(\mbox{\boldmath $y$}_{it}|u)\) that here denotes the
+categorical responses, but with \(f(\boldsymbol{y}_{it}|u)\) that here denotes the
 density of the multivariate Gaussian distribution based on assumption in
 Equation \eqref{eq:norm}, possibly dependent on the covariates. Maximum
 likelihood estimation is carried out as illustrated in Section 3.2
@@ -1113,26 +1117,26 @@ the MAR assumption: partially missing outcomes at a given time occasion
 and completely missing outcomes, that is, when individuals do not
 respond at one or more time occasions (intermittent pattern). Following
 \cite{pand:bart:penn:23}, in the presence of missing responses, it is
-convenient to partition each response vector \(\mbox{\boldmath $Y$}_{it}\) as
-\((\mbox{\boldmath $Y$}_{it}^o, \mbox{\boldmath $Y$}_{it}^m)^\prime\), where \(\mbox{\boldmath $Y$}_{it}^o\) is the
-(sub)-vector of observed variables, and \(\mbox{\boldmath $Y$}_{it}^m\) refers to the
+convenient to partition each response vector \(\boldsymbol{Y}_{it}\) as
+\((\boldsymbol{Y}_{it}^o, \boldsymbol{Y}_{it}^m)^\prime\), where \(\boldsymbol{Y}_{it}^o\) is the
+(sub)-vector of observed variables, and \(\boldsymbol{Y}_{it}^m\) refers to the
 missing data. The conditional mean vectors and variance-covariance
 matrix may be decomposed into observed and missing components as
 follows:
 \[
-\mbox{\boldmath $\mu$}_u =  \begin{pmatrix}
-\mbox{\boldmath $\mu$}_u^{o} \\
-\mbox{\boldmath $\mu$}_{u}^m
-\end{pmatrix}, \quad \mbox{\boldmath $\Sigma$}_u =  \begin{pmatrix}
-\mbox{\boldmath $\Sigma$}_u^{oo} &  \mbox{\boldmath $\Sigma$}_u^{om}\\
-\mbox{\boldmath $\Sigma$}_u^{mo} & \mbox{\boldmath $\Sigma$}_u^{mm}
+\boldsymbol{\mu}_u =  \begin{pmatrix}
+\boldsymbol{\mu}_u^{o} \\
+\boldsymbol{\mu}_{u}^m
+\end{pmatrix}, \quad \boldsymbol{\Sigma}_u =  \begin{pmatrix}
+\boldsymbol{\Sigma}_u^{oo} &  \boldsymbol{\Sigma}_u^{om}\\
+\boldsymbol{\Sigma}_u^{mo} & \boldsymbol{\Sigma}_u^{mm}
 \end{pmatrix},
 \]
-where, for instance, \(\mbox{\boldmath $\Sigma$}_u^{om}\) is the block of
-\(\mbox{\boldmath $\Sigma$}_u\) collecting covariances between each observed and missing
+where, for instance, \(\boldsymbol{\Sigma}_u^{om}\) is the block of
+\(\boldsymbol{\Sigma}_u\) collecting covariances between each observed and missing
 response. In this way, for the observed responses, we have that:
 \[
-\mbox{\boldmath $Y$}_{it}^o|U_{it}=u\sim N( \mbox{\boldmath $\mu$}_u^o, \mbox{\boldmath $\Sigma$}_u^{oo}),\quad u=1,\ldots,k.
+\boldsymbol{Y}_{it}^o|U_{it}=u\sim N( \boldsymbol{\mu}_u^o, \boldsymbol{\Sigma}_u^{oo}),\quad u=1,\ldots,k.
 \label{eq:normMiss}
 \]
 The manifest distribution of the responses is now expressed with
@@ -1148,11 +1152,11 @@ conditionally or unconditionally on the predicted states. Within the
 MAR assumption, the unconditional prediction of the missing responses is
 performed by computing
 \[
-\tilde{\mbox{\boldmath $y$}}_{it} = \sum_{u=1}^k \hat{a}_{it,u} E(\mbox{\boldmath $Y$}_{it}|\mbox{\boldmath $y$}_{it}^o, u),
+\tilde{\boldsymbol{y}}_{it} = \sum_{u=1}^k \hat{a}_{it,u} E(\boldsymbol{Y}_{it}|\boldsymbol{y}_{it}^o, u),
 \]
 where
-\(\hat{a}_{it,u} = p(U_{it}|\mbox{\boldmath $y$}_{i1}^o,\ldots,\mbox{\boldmath $y$}_{iT_i}^o, \mbox{\boldmath $x$}_{i1},\ldots,\mbox{\boldmath $x$}_{iT_i})\)
-and \(E(\mbox{\boldmath $Y$}_{it}|\mbox{\boldmath $y$}_{it}^o, u)\) are posterior expected values
+\(\hat{a}_{it,u} = p(U_{it}|\boldsymbol{y}_{i1}^o,\ldots,\boldsymbol{y}_{iT_i}^o, \boldsymbol{x}_{i1},\ldots,\boldsymbol{x}_{iT_i})\)
+and \(E(\boldsymbol{Y}_{it}|\boldsymbol{y}_{it}^o, u)\) are posterior expected values
 computed at the E-step.
 
 Finally, both local and global decoding may be performed as usual. In
