--- a/articles/RJ-2024-036/RJwrapper.tex
+++ b/articles/RJ-2024-036/RJwrapper.tex
@@ -44,6 +44,7 @@
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 
+\usepackage{bm}
 
 \begin{document}
 
@@ -54,7 +55,6 @@
 \volnumber{4}
 \year{2024}
 \month{December}
-\setcounter{page}{76}
 
 \begin{article}
   \input{RJ-2024-036}
