--- a/articles/RJ-2024-033/RJwrapper.tex
+++ b/articles/RJ-2024-033/RJwrapper.tex
@@ -44,8 +44,7 @@
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
 
 
-\usepackage{longtable}
-\usepackage{calc}
+\usepackage{float, amsmath}
 
 \begin{document}
 
@@ -56,7 +55,6 @@
 \volnumber{4}
 \year{2024}
 \month{December}
-\setcounter{page}{23}
 
 \begin{article}
   \input{RJ-2024-033}
