--- a/articles/RJ-2024-033/refs.bib
+++ b/articles/RJ-2024-033/refs.bib
@@ -463,7 +463,7 @@ url = {https://CRAN.R-project.org/package=sirt},
 
 @article{Jones:1991,
 title = {The roles of {ISE} and {MISE} in density estimation},
-journal = {Statistics and Probability Letters},
+journal = {Statistics \& Probability Letters},
 volume = {12},
 number = {1},
 pages = "51--56",
