fixed issues with table formatting

--- a/_articles/RJ-2024-041/RJ-2024-041.Rmd
+++ b/_articles/RJ-2024-041/RJ-2024-041.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'GPUmatrix: Seamlessly harness the power of GPU computing in R'
-date: '2025-07-14'
+date: '2025-07-17'
 abstract: |
   GPUs are invaluable for data analysis, particularly in statistics and linear algebra, but integrating them with R has been challenging due to the lack of transparent, easily maintainable packages that don't require significant code alterations. Recognizing this gap, we've developed the GPUmatrix package, now available on CRAN, which emulates the Matrix package's behavior, enabling R to harness the power of GPUs for computations with minimal code adjustments. GPUmatrix supports both single (FP32) and double (FP64) precision data types and includes support for sparse matrices, ensuring broad applicability. Designed for ease of use, it requires only slight modifications to existing code, leveraging the Torch or Tensorflow R packages for GPU operations. We've validated its effectiveness in various statistical and machine learning tasks, including non-negative matrix factorization, logistic regression, and general linear models, and provided a comparative analysis of GPU versus CPU performance, highlighting significant efficiency gains.
 draft: no
@@ -36,9 +36,6 @@ date_received: '2024-03-28'
 volume: 16
 issue: 4
 slug: RJ-2024-041
-journal:
-  lastpage: 180
-  firstpage: 160
 
 ---
 
@@ -48,7 +45,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 library(plotly)
 library(ggplot2)
 library(palmerpenguins)
-library(kableExtra)
+#library(kableExtra)
 library(Matrix)
 ```
 
@@ -139,11 +136,11 @@ df <- data.frame(
 ```
 
 ```{r cast-packages-latex, eval = knitr::is_latex_output()}
- knitr::kable(df, format = "latex",caption = "Cast options from other packages. If back cast is TRUE, then it is possible to convert a gpu.matrix to this object and vice versa. If is FALSE, it is possible to convert these objects to gpu.matrix but not vice versa.")
+ knitr::kable(df, format = "latex", booktabs=TRUE, caption = "Cast options from other packages. If back cast is TRUE, then it is possible to convert a gpu.matrix to this object and vice versa. If is FALSE, it is possible to convert these objects to gpu.matrix but not vice versa.")
 ```
 
-```{r cast-packages-html, eval = knitr::is_html_output(), layout = "l-body-outset"}
- knitr::kable(df, format = "html",caption = "Cast options from other packages. If back cast is TRUE, then it is possible to convert a gpu.matrix to this object and vice versa. If is FALSE, it is possible to convert these objects to gpu.matrix but not vice versa.")
+```{r cast-packages-html, eval = knitr::is_html_output()}
+ knitr::kable(df, format = "html",booktabs=TRUE, caption = "Cast options from other packages. If back cast is TRUE, then it is possible to convert a gpu.matrix to this object and vice versa. If is FALSE, it is possible to convert these objects to gpu.matrix but not vice versa.")
 ```
 
 There are two functions for casting to create a `gpu.matrix`: `as.gpu.matrix()**` and the `gpu.matrix()` constructor itself. Both have the same input parameters for casting: the object to be cast and extra parameters to create a GPUmatrix.
@@ -246,11 +243,11 @@ df_operators <- data.frame(
 ```
 
 ```{r math-operators, eval = knitr::is_latex_output()}
- knitr::kable(df_operators, format = "latex",caption = "Mathematical operators that accept a gpu.matrix as input.")
+ knitr::kable(df_operators, format = "latex",booktabs=TRUE, caption = "Mathematical operators that accept a gpu.matrix as input.")
 ```
 
-```{r math-operators-html, eval = knitr::is_html_output(), layout = "l-body-outset"}
- knitr::kable(df_operators, format = "html",caption = "Mathematical operators that accept a gpu.matrix as input.")
+```{r math-operators-html, eval = knitr::is_html_output()}
+ knitr::kable(df_operators, format = "html",booktabs=TRUE, caption = "Mathematical operators that accept a gpu.matrix as input.")
 ```
 
 ### Complex operators
@@ -266,11 +263,11 @@ df_complex <- data.frame(
 ```
 
 ```{r complex-operators, eval = knitr::is_latex_output()}
- knitr::kable(df_complex, format = "latex",caption = "Complex operators that accept a gpu.matrix with complex type as input.")
+ knitr::kable(df_complex, format = "latex",booktabs=TRUE, caption = "Complex operators that accept a gpu.matrix with complex type as input.")
 ```
 
-```{r complex-operators-html, eval = knitr::is_html_output(), layout = "l-body-outset"}
- knitr::kable(df_complex, format = "html",caption = "Complex operators that accept a gpu.matrix with complex type as input.")
+```{r complex-operators-html, eval = knitr::is_html_output()}
+ knitr::kable(df_complex, format = "html",booktabs=TRUE, caption = "Complex operators that accept a gpu.matrix with complex type as input.")
 ```
 
 ### Other functions
