--- a/_articles/RJ-2024-041/RJ-2024-041.tex
+++ b/_articles/RJ-2024-041/RJ-2024-041.tex
@@ -198,32 +198,24 @@ GPUmatrix allows for compatibility with sparse matrices and different data types
 
 \caption{\label{tab:cast-packages-latex}Cast options from other packages. If back cast is TRUE, then it is possible to convert a gpu.matrix to this object and vice versa. If is FALSE, it is possible to convert these objects to gpu.matrix but not vice versa.}
 \centering
-\begin{tabular}[t]{l|l|l|l|l}
-\hline
+\begin{tabular}[t]{lllll}
+\toprule
 MatrixClass & Package & DataTypeDefault & SPARSE & BackCast\\
-\hline
+\midrule
 matrix & base & float64 & FALSE & TRUE\\
-\hline
 data.frame & base & float64 & FALSE & TRUE\\
-\hline
 integer & base & float64 & FALSE & TRUE\\
-\hline
 numeric & base & float64 & FALSE & TRUE\\
-\hline
 dgeMatrix & Matrix & float64 & FALSE & FALSE\\
-\hline
+\addlinespace
 ddiMatrix & Matrix & float64 & TRUE & FALSE\\
-\hline
 dpoMatrix & Matrix & float64 & FALSE & FALSE\\
-\hline
 dgCMatrix & Matrix & float64 & TRUE & FALSE\\
-\hline
 float32 & float & float32 & FALSE & FALSE\\
-\hline
 torch\_tensor & torch & float64 & Depends of tensor type & TRUE\\
-\hline
+\addlinespace
 tensorflow.tensor & tensorflow & float64 & Depends of tensor type & TRUE\\
-\hline
+\bottomrule
 \end{tabular}
 \end{table}
 
@@ -298,9 +290,9 @@ Ms
 \begin{verbatim}
 #> 5 x 2 sparse Matrix of class "dgCMatrix"
 #>         
-#> [1,] 1 .
-#> [2,] . 1
-#> [3,] . 1
+#> [1,] . 1
+#> [2,] 1 1
+#> [3,] 1 1
 #> [4,] 1 .
 #> [5,] 1 .
 \end{verbatim}
@@ -315,16 +307,18 @@ Gms
 #> torch_tensor
 #> [ SparseCPUFloatType{}
 #> indices:
-#>  0  1  2  3  4
-#>  0  1  1  0  0
-#> [ CPULongType{2,5} ]
+#>  0  1  1  2  2  3  4
+#>  1  0  1  0  1  0  0
+#> [ CPULongType{2,7} ]
 #> values:
 #>  1
 #>  1
 #>  1
 #>  1
 #>  1
-#> [ CPUFloatType{5} ]
+#>  1
+#>  1
+#> [ CPUFloatType{7} ]
 #> size:
 #> [5, 2]
 #> ]
@@ -364,11 +358,11 @@ Gm32
 \begin{verbatim}
 #> GPUmatrix
 #> torch_tensor
-#>  1  1
-#>  0  0
 #>  1  0
-#>  0  0
 #>  0  1
+#>  0  0
+#>  0  0
+#>  1  1
 #> [ CPUFloatType{5,2} ]
 \end{verbatim}
 
@@ -384,7 +378,7 @@ Gms32
 #> torch_tensor
 #> [ SparseCPUFloatType{}
 #> indices:
-#>  0  2  0  4
+#>  0  4  1  4
 #>  0  0  1  1
 #> [ CPULongType{2,4} ]
 #> values:
@@ -411,7 +405,7 @@ Gms64
 #> torch_tensor
 #> [ SparseCPUDoubleType{}
 #> indices:
-#>  0  2  0  4
+#>  0  4  1  4
 #>  0  0  1  1
 #> [ CPULongType{2,4} ]
 #> values:
@@ -483,58 +477,39 @@ Similarly to arithmetic operators, mathematical operators follow the same operat
 
 \caption{\label{tab:math-operators}Mathematical operators that accept a gpu.matrix as input.}
 \centering
-\begin{tabular}[t]{l|l}
-\hline
+\begin{tabular}[t]{ll}
+\toprule
 MathematicalOperators & Usage\\
-\hline
+\midrule
 log & log(Gm)\\
-\hline
 log2 & log2(Gm)\\
-\hline
 log10 & log10(Gm)\\
-\hline
 cos & cos(Gm)\\
-\hline
 cosh & cosh(Gm)\\
-\hline
+\addlinespace
 acos & acos(Gm)\\
-\hline
 acosh & acosh(Gm)\\
-\hline
 sin & sin(Gm)\\
-\hline
 sinh & sinh(Gm)\\
-\hline
 asin & asin(Gm)\\
-\hline
+\addlinespace
 asinh & asinh(Gm)\\
-\hline
 tan & tan(Gm)\\
-\hline
 atan & atan(Gm)\\
-\hline
 tanh & tanh(Gm)\\
-\hline
 atanh & atanh(Gm)\\
-\hline
+\addlinespace
 sqrt & sqrt(Gm)\\
-\hline
 abs & abs(Gm)\\
-\hline
 sign & sign(Gm)\\
-\hline
 ceiling & ceiling(Gm)\\
-\hline
 floor & floor(Gm)\\
-\hline
+\addlinespace
 cumsum & cumsum(Gm)\\
-\hline
 cumprod & cumprod(Gm)\\
-\hline
 exp & exp(Gm)\\
-\hline
 expm1 & expm1(Gm)\\
-\hline
+\bottomrule
 \end{tabular}
 \end{table}
 
@@ -547,20 +522,16 @@ There are certain functions only applicable to numbers of complex type. In R the
 
 \caption{\label{tab:complex-operators}Complex operators that accept a gpu.matrix with complex type as input.}
 \centering
-\begin{tabular}[t]{l|l}
-\hline
+\begin{tabular}[t]{ll}
+\toprule
 MathematicalOperators & Usage\\
-\hline
+\midrule
 Re & Re(Gm)\\
-\hline
 Im & Im(Gm)\\
-\hline
 Conj & Conj(Gm)\\
-\hline
 Arg & Arg(Gm)\\
-\hline
 Mod & Mod(Gm)\\
-\hline
+\bottomrule
 \end{tabular}
 \end{table}
 
