fixed figure width issue in latex

--- a/_articles/RJ-2024-042/RJ-2024-042.Rmd
+++ b/_articles/RJ-2024-042/RJ-2024-042.Rmd
@@ -22,9 +22,6 @@ date_received: '2024-03-28'
 volume: 16
 issue: 4
 slug: RJ-2024-042
-journal:
-  lastpage: 196
-  firstpage: 181
 
 ---
 
@@ -209,7 +206,7 @@ A horizontal unlabelled UpAndDown plot has been chosen.
 
 `yd$uad`
 
-```{r CPI, echo = FALSE, fig.asp = 0.6, fig.cap="UK Consumer Price Index changes August 2017 to August 2018.  The red dotted line shows the overall percentage change.  The rectangles with blue borders show the changes of the main sectors.  Heights are percentage changes, widths are index values in August 2017, so that the areas of the rectangles are each group contributions to the overall change.  The grey bars show the percentage and absolute changes for the individual components."}
+```{r CPI, echo = FALSE, fig.asp = 0.6,out.width='90%', fig.cap="UK Consumer Price Index changes August 2017 to August 2018.  The red dotted line shows the overall percentage change.  The rectangles with blue borders show the changes of the main sectors.  Heights are percentage changes, widths are index values in August 2017, so that the areas of the rectangles are each group contributions to the overall change.  The grey bars show the percentage and absolute changes for the individual components."}
 library(UpAndDownPlots)
 yp <- ud_prep(CPIuk, weight="Weight", v1="Aug2017", v2="Aug2018",
   levs=c("Sector", "Component"), sortLev=c("orig", "orig"))
@@ -233,7 +230,7 @@ A vertical labelled UpAndDown plot has been chosen.
 
 `yf$uadl`
 
-```{r CPIlab, echo = FALSE, fig.asp = 1.2, fig.cap="CPI changes ordered by percentage changes of sectors and by percentage changes of components within sectors.  Two sectors, Transport and Recreation and Culture, made the biggest contributions to change.  Prices increased for all components in most sectors."}
+```{r CPIlab, echo = FALSE, fig.asp = 1.2,out.width='90%', fig.cap="CPI changes ordered by percentage changes of sectors and by percentage changes of components within sectors.  Two sectors, Transport and Recreation and Culture, made the biggest contributions to change.  Prices increased for all components in most sectors."}
 yq <- ud_prep(CPIuk, weight="Weight", v1="Aug2017", v2="Aug2018", levs=c("Sector", "Component"), sortLev=c("perc", "perc"))
 yf <- ud_plot(yq, labelvar="Sector", drawFrom="SmallToBig", vscale=c(-30, 30))
 yf$uadl
@@ -248,7 +245,7 @@ Figure \@ref(fig:NIvars) shows UpAndDown plots for each of the possible grouping
 
 Age groups displayed the most variation with a high percentage increase amongst the 65+ group and a decline in the 16-39 group.  Male and female changes were similar.  All the districts increased in population, while some of the 80 areas actually declined in population.
 
-```{r NIvars, echo = TRUE, fig.cap="Percentage changes in population between 2011 and 2017 by age, gender, district, and area."}
+```{r NIvars, echo = TRUE,out.width='90%', fig.cap="Percentage changes in population between 2011 and 2017 by age, gender, district, and area."}
 library(gridExtra)
 g4 <- dgroup(NIpop, byvars=c("age", "gender", "LGD2014_name", "area_name"),
              v1="y2011", v2="y2017")
@@ -278,7 +275,7 @@ kables(list(kK3, kK4))
 
 Figure \@ref(fig:NIag) is a graphic for age and gender together.  It reveals that there was a much bigger percentage increase in numbers of older men than in numbers of older women (albeit from a lower base), that there was little difference between males and females in the youngest group, and that the decline in 16-39 year-olds was greater for females than for males.
 
-```{r NIag, echo = TRUE, fig.cap="Percentage changes in population between 2011 and 2017 by age and then gender (males above, females below)."}
+```{r NIag, echo = TRUE,out.width='90%', fig.cap="Percentage changes in population between 2011 and 2017 by age and then gender (males above, females below)."}
 ag <- ud_prep(NIpop, v1="y2011", v2="y2017", levs=c("age", "gender"),
               sortLev=c("orig", "perc"))
 kag <- ud_plot(ag, labelvar="age")
@@ -287,7 +284,7 @@ kag$uadl
 
 These results may vary by the 11 districts and a plot of changes by district, age, and gender could be drawn.  For the purposes of the article, three districts have been chosen: the cities of Belfast and Derry and the district of Newry, Mourne and Down.  Figure \@ref(fig:NIdag) shows the plot.  The two younger groups declined in population for both males and females in Derry and Strabane.  In Belfast the number of male 16-39 year-olds actually increased, but the main difference to the other districts is the somewhat lower increase in the male 65+ group and the lack of any increase in the female 65+ group.
 
-```{r NIdag, echo = TRUE, fig.cap="Percentage changes in population between 2011 and 2017 for three districts (changes outlined in blue), four age groups (outlined in brown), and gender (filled bars)."}
+```{r NIdag, echo = TRUE,out.width='90%', fig.cap="Percentage changes in population between 2011 and 2017 for three districts (changes outlined in blue), four age groups (outlined in brown), and gender (filled bars)."}
 NIpopW <- NIpop %>% filter(LGD2014_name %in% c("Belfast", "Derry City and Strabane",
                 "Newry, Mourne and Down"))
 zdag <- ud_prep(NIpopW, v1="y2011", v2="y2017", levs=c("LGD2014_name", "age", "gender"),
@@ -332,7 +329,7 @@ The two labelled graphics are drawn side by side using \CRANpkg{patchwork}.
 
 `yM$uadl + yS$uadl`
 
-```{r autoS, echo = FALSE, fig.width = 6, fig.asp = 1, fig.cap="Compact car sales changes in Germany by manufacturer between 2017 and 2018.  The plot on the left is drawn with a baseline of zero change and ordered by percentage changes.  The plot on the right is drawn with a baseline of the overall market change and ordered by changes in market share."}
+```{r autoS, echo = FALSE, fig.width = 6, fig.asp = 1,out.width='90%', fig.cap="Compact car sales changes in Germany by manufacturer between 2017 and 2018.  The plot on the left is drawn with a baseline of zero change and ordered by percentage changes.  The plot on the right is drawn with a baseline of the overall market change and ordered by changes in market share."}
 library(patchwork)
 AutoSalesXcomp <- AutoSalesX %>% filter(Segment=="Compact")
 yxp <- ud_prep(AutoSalesXcomp, v1="sales17", v2="sales18",
