--- a/_articles/RJ-2024-042/RJ-2024-042.tex
+++ b/_articles/RJ-2024-042/RJ-2024-042.tex
@@ -247,7 +247,7 @@ A horizontal unlabelled UpAndDown plot has been chosen.
 
 \begin{figure}
 
-{\centering \includegraphics{RJ-2024-042_files/figure-latex/CPI-1} 
+{\centering \includegraphics[width=0.9\linewidth]{RJ-2024-042_files/figure-latex/CPI-1} 
 
 }
 
@@ -272,7 +272,7 @@ A vertical labelled UpAndDown plot has been chosen.
 
 \begin{figure}
 
-{\centering \includegraphics{RJ-2024-042_files/figure-latex/CPIlab-1} 
+{\centering \includegraphics[width=0.9\linewidth]{RJ-2024-042_files/figure-latex/CPIlab-1} 
 
 }
 
@@ -299,7 +299,7 @@ grid.arrange(g4$uadgl)
 
 \begin{figure}
 
-{\centering \includegraphics{RJ-2024-042_files/figure-latex/NIvars-1} 
+{\centering \includegraphics[width=0.9\linewidth]{RJ-2024-042_files/figure-latex/NIvars-1} 
 
 }
 
@@ -374,7 +374,7 @@ kag$uadl
 
 \begin{figure}
 
-{\centering \includegraphics{RJ-2024-042_files/figure-latex/NIag-1} 
+{\centering \includegraphics[width=0.9\linewidth]{RJ-2024-042_files/figure-latex/NIag-1} 
 
 }
 
@@ -394,7 +394,7 @@ zdag2$uadl
 
 \begin{figure}
 
-{\centering \includegraphics{RJ-2024-042_files/figure-latex/NIdag-1} 
+{\centering \includegraphics[width=0.9\linewidth]{RJ-2024-042_files/figure-latex/NIdag-1} 
 
 }
 
@@ -440,7 +440,7 @@ The two labelled graphics are drawn side by side using \CRANpkg{patchwork}.
 
 \begin{figure}
 
-{\centering \includegraphics{RJ-2024-042_files/figure-latex/autoS-1} 
+{\centering \includegraphics[width=0.9\linewidth]{RJ-2024-042_files/figure-latex/autoS-1} 
 
 }
 
