--- a/_news/RJ-2025-1-editorial/editorial.tex
+++ b/_news/RJ-2025-1-editorial/editorial.tex
@@ -7,8 +7,13 @@
 \maketitle
 
 
-On behalf of the editorial board, I am pleased to present Volume 17 Issue 1 of
-the R Journal.
+At the start of each year, one of the Executive Editors of the R Journal steps down and a new Executive Editor is appointed. This year, we say farewell to Simon Urbanek, and thank him for his service as Executive Editor over the period 2021-2024, including being Editor-in-Chief in 2023. And we welcome Emily Zabor, who joins the team of Executive Editors. Emily is an Associate Professor of Medicine at the Cleveland Clinic in Ohio, and is an active contributor to the R community responsible for several CRAN packages. She has been an Associate Editor of the R Journal since 2020, and has also been on the editorial boards of the Journal of Urology, European Urology, and the Journal of Clinical Oncology. We are delighted to have her step up to the role of Executive Editor for the next four years.
+
+The other change at the start of each year is that the Editor-in-Chief changes. We thank Mark van der Loo for his service as Editor-in-Chief for 2024; he will continue as an Executive Editor for one more year. I will be the Editor-in-Chief for 2025, and I look forward to working with the editorial team to continue the development of the R Journal. The other continuing Executive Editor is Emi Tanaka.
+
+We also welcome some new Associate Editors: Tomasz Woźniak, Alexander Kowarik, Thomas Nagler, Robin Lovelace, Valentin Todorov, Julia Wrobel, and David Ardia. We are grateful to them for their willingness to contribute to the R Journal. Several Associate Editors have stepped down, and we thank them for their contributions: Nicholas Tierney, Chris Brunsdon, Ivan Svetunkov and Romain Lesur. We also thank the many Associate Editors who continue to contribute to the R Journal.
+
+On behalf of the editorial board, I am pleased to present Volume 17 Issue 1 of the R Journal.
 
 \section*{In this issue}\label{in-this-issue}
 \addcontentsline{toc}{section}{In this issue}
